--- a/styles.css
+++ b/styles.css
@@ -452,7 +452,7 @@ body {
 ================================ */
 
 #loginPage {
-  background-image: url("background.png");
+  background-image: url("background1.png");
   background-size: cover;       /* fills screen */
   background-position: center;  /* center crop */
   background-repeat: no-repeat;
