--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ body {
 
 .form-group input:focus {
     border-color: #4f46e5;
-    box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.15);
+    box-shadow: 0 0 0 3px rgb(135,206,250);
 }
 
 
