--- a/styles.css
+++ b/styles.css
@@ -114,8 +114,8 @@ body {
 }
 
 .form-group input:focus {
-    border-color: #4f46e5;
-    box-shadow: 0 0 0 3px rgb(135,206,250);
+    border-color: #67c1f9;
+    box-shadow: 0 0 0 1px rgb(135,206,250);
 }
 
 
