--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@ body {
 }
 
 .btn-primary {
-  background: var(--primary);
+  background: rgb(135,206,250);
   color: #fff;
 }
 
@@ -221,7 +221,7 @@ body {
 .user-avatar {
   width: 36px;
   height: 36px;
-  background: var(--primary);
+  background: rgb(135,206,250);
   border-radius: 50%;
   display: grid;
   place-items: center;
